--- a/Model Building.ipynb
+++ b/Model Building.ipynb
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1856,20 +1856,30 @@
       "[Parallel(n_jobs=8)]: Done 434 tasks      | elapsed:    0.1s\n",
       "[Parallel(n_jobs=8)]: Done 550 out of 550 | elapsed:    0.1s finished\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "pred = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1])"
+       "1"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(X)"
+    "int(pred)"
    ]
   },
   {
