added flask endpoint

--- a/Model Building.ipynb
+++ b/Model Building.ipynb
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1859,27 +1859,27 @@
     }
    ],
    "source": [
-    "pred = model.predict(X)"
+    "pred = model.predict_proba(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0.9454993736789108"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(pred)"
+    "pred[0][1]"
    ]
   },
   {
